--- a/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
@@ -15,6 +15,9 @@
  * limitations under the License.
 */
 -->
+
+    <!-- Starting padding for a left-aligned quick status bar clock -->
+    <dimen name="status_bar_left_clock_starting_padding">0dp</dimen>
 <resources>
     <dimen name="rounded_corner_content_padding">20dp</dimen>
 </resources>
